<resources>
    <string name="app_name">Forum App</string>
    <!-- Label -->
    <string name="label_activity_login">LoginActivity</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in_or_register">Sign in or register</string>
    <string name="label_sign_in">Sign in</string>
    <string name="label_welcome">"Welcome !"</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_name">Name</string>
    <string name="label_image_upload">Upload gambar</string>
    <string name="label_send_question">Kirim Pertanyaan</string>
    <string name="label_desc">Deskripsi</string>
    <string name="label_title">Title</string>
    <string name="label_img_content_desc">image</string>
    <string name="label_answers">answers</string>
    <string name="label_add_your_question">Tambah Komentar</string>
    <string name="label_send">Kirim</string>
    <string name="label_add">Tambah</string>
    <string name="label_my_list_question">Daftar pertanyaanku</string>
    <string name="label_profile">Profile</string>
    <string name="label_home">Home</string>
    <string name="label_list_question">Daftar Pertanyaan</string>
    <!-- Hint -->
    <string name="hint_invalid_username">Not a valid username</string>
    <string name="hint_invalid_password">Password must be >5 characters</string>
    <string name="hint_login_failed">"Login failed"</string>
    <string name="hint_empty_field">Tidak boleh kosong</string>
    <string name="hint_choice_image">Pilih gambar terlebih dahulu</string>
    <string name="label_logout">logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_update">Update</string>
</resources>